http instead of https

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -44,7 +44,7 @@
   type: 1
 
 - company: CafeMedia 
-  link: https://www.cafemedia.com/
+  link: http://www.cafemedia.com/
   imgURL: /assets/images/partners/standard/cafemedia.png
   type: 1
 
