--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -43,3 +43,8 @@
   imgURL: /assets/images/partners/standard/sortable.png
   type: 1
 
+- company: CafeMedia 
+  link: http://www.cafemedia.com/
+  imgURL: /assets/images/partners/standard/cafemedia.png
+  type: 1
+
