--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -491,6 +491,15 @@
 - sbSecId: 1
   title: IAB Subcategory Translation
   link: /dev-docs/modules/iabCatalogTranslation.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 5
+  
+- sbSecId: 1
+  title: Freewheel Module
+  link: /dev-docs/modules/freewheel.html
   isLastSubSectionItem: 1
   isHeader: 0
   isSectionHeader: 0
