--- a/_data/message.yml
+++ b/_data/message.yml
@@ -1,5 +1,5 @@
 #-------------Message----------------
 
 - messageId: 1
-  messageText: <a href="/blog/pbjs-2">Prebid.js 2.0 is released</a>. It's not as big as you might think.
-  messageCreateDt: 01_31_2019
+  messageText: <a href="/blog/barcelona-2019">Prebid Leadership Summit in Barcelona on Feb 25th 2019!</a>
+  messageCreateDt: 02_12_2019
