--- a/_data/dropdown_v2.yml
+++ b/_data/dropdown_v2.yml
@@ -116,6 +116,16 @@
     sectionName: Product
     title: Bidder Params
     link: /dev-docs/bidders.html
+    needsDivider: 0
+    isHeader: 0
+    isSubHeader: 0
+    isSubSectionStart: 0
+
+  - subsectionId: 0
+    sectionId: 1
+    sectionName: Product
+    title: Plugins
+    link: /dev-docs/plugins/index.html
     needsDivider: 1
     isHeader: 0
     isSubHeader: 0
