fixing rubicon link

--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -4,7 +4,7 @@
   type: 0
   
 - company: Rubicon 
-  link: http://rubiconproject.com/headerbidding
+  link: https://rubiconproject.com/header-bidding-for-publishers/
   imgURL: /assets/images/partners/founders/rubicon.png
   type: 0
   
