--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1415,6 +1415,15 @@
   subgroup: 2
 
 - sbSecId: 5
+  title: Prebid Server Auction
+  link: /prebid-server/endpoints/openrtb2/auction.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 2
+  
+- sbSecId: 5
   title: Prebid Server AMP
   link: /prebid-server/endpoints/openrtb2/amp.html
   isLastSubSectionItem: 0
@@ -1422,10 +1431,10 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 2
-
+  
 - sbSecId: 5
-  title: Prebid Server Auction
-  link: /prebid-server/endpoints/openrtb2/auction.html
+  title: Prebid Server Video
+  link: /prebid-server/endpoints/openrtb2/video.html
   isLastSubSectionItem: 0
   isHeader: 0
   isSectionHeader: 0
