--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -53,6 +53,11 @@
   imgURL: /assets/images/partners/standard/Pubnative-RGB-Logo.png
   type: standard
 
+- company: Mediavine
+  link: https://www.mediavine.com/
+  imgURL: /assets/images/partners/publisher/mediavine-sq-teal-navy-pn-RGB.png
+  type: publisher
+
 - company: GoBrowsi
   link: https://gobrowsi.com
   imgURL: /assets/images/partners/community/Browsi-Logo.png
