Refactored code to not show message box when there is no message.

--- a/_data/message.yml
+++ b/_data/message.yml
@@ -1,4 +1,6 @@
 #-------------Message----------------
 - messageId: 1
-  messageText: no message
-  messageCreateDt: 06_19_2019
+  messageText:
+  messageCreateDt: 07_29_2019
+  
+
