--- a/_data/message.yml
+++ b/_data/message.yml
@@ -1,4 +1,6 @@
 #-------------Message----------------
 - messageId: 1
-  messageText: <a href="/blog/london-event-2019.html">Prebid Leadership Summit in London on July 11th 2019!</a>
-  messageCreateDt: 06_19_2019
+  messageText:
+  messageCreateDt: 07_29_2019
+  
+
