--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1449,6 +1449,15 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 2
+  
+  - sbSecId: 5
+  title: Get User Syncs
+  link: /prebid-server/endpoints/getuids.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 2
 
 - sbSecId: 5
   title: Get Status
