Edit per @jstemp

--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1218,7 +1218,7 @@
   subgroup: 0
   
 - sbSecId: 4
-  title: Show Long Form Video Ads with GAM
+  title: Show OTT Video Ads with Prebid
   link: /dev-docs/show-long-form-video-with-gam.html
   isLastSubSectionItem: 0
   isHeader: 0
