Pb gam pop (#1423)
* added long form file and fixed side nav

* Added GAM ad pod files

* added api ref and long form doc

* Edit per @jstemp

--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1216,6 +1216,15 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 0
+  
+- sbSecId: 4
+  title: Show OTT Video Ads with Prebid
+  link: /dev-docs/show-long-form-video-with-gam.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 0
 
 - sbSecId: 4
   title: Outstream Video Ads
