--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -178,15 +178,6 @@
   subgroup: 0
 
 - sbSecId: 1
-  title: Prebid.js Training Videos
-  link: /videos/setup.html
-  isLastSubSectionItem: 1
-  isHeader: 0
-  isSectionHeader: 0
-  sectionTitle:
-  subgroup: 0
-
-- sbSecId: 1
   title: Examples
   link:
   isLastSubSectionItem: 0
@@ -279,26 +270,8 @@
   subgroup: 2
 
 - sbSecId: 1
-  title: Dev Tips
-  link: /dev-docs/troubleshooting-tips.html
-  isLastSubSectionItem: 0
-  isHeader: 0
-  isSectionHeader: 0
-  sectionTitle:
-  subgroup: 2
-
-- sbSecId: 1
-  title: Common Issues
-  link: /dev-docs/common-issues.html
-  isLastSubSectionItem: 0
-  isHeader: 0
-  isSectionHeader: 0
-  sectionTitle:
-  subgroup: 2
-
-- sbSecId: 1
-  title: Prebid.js Troubleshooting Guide
-  link: /dev-docs/prebid-troubleshooting-guide.html
+  title: Troubleshooting Guide
+  link: /troubleshooting/troubleshooting-guide.html
   isLastSubSectionItem: 0
   isHeader: 0
   isSectionHeader: 0
@@ -309,15 +282,6 @@
   title: Browser Extension for Debugging
   link: /debugging/debugging.html
   isLastSubSectionItem: 0
-  isHeader: 0
-  isSectionHeader: 0
-  sectionTitle:
-  subgroup: 2
-
-- sbSecId: 1
-  title: Prebid.js Troubleshooting Training Videos
-  link: /videos/troubleshooting.html
-  isLastSubSectionItem: 1
   isHeader: 0
   isSectionHeader: 0
   sectionTitle:
