--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -259,6 +259,15 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 2
+  
+- sbSecId: 1
+  title: Common Issues
+  link: /dev-docs/common-issues.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 2
 
 - sbSecId: 1
   title: Prebid.js FAQ
