added new SDK documents

--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -769,6 +769,16 @@
   subgroup: 1
 
 - sbSecId: 2
+  title: Prebid Utilities
+  link: /prebid-mobile/pbm-api/ios/pbm-util-ios.html
+  isLastSubSectionItem: 1
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 1
+
+
+- sbSecId: 2
   title: For Android
   link:
   isLastSubSectionItem: 0
@@ -844,6 +854,15 @@
 - sbSecId: 2
   title: Prebid Mobile Object
   link: /prebid-mobile/pbm-api/android/prebidmobile-object-android.html
+  isLastSubSectionItem: 1
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 2
+
+- sbSecId: 2
+  title: Prebid Utility Functions
+  link: /prebid-mobile/pbm-api/android/pbm-util-android.html
   isLastSubSectionItem: 1
   isHeader: 0
   isSectionHeader: 0
