Pb server docs (#1424)
* Added getuids file to PBS endpoints

* Added link to getuid file in side nav

* Updated last section item in side nav

* Fixed typo in include path for note and fixed indent issue in yml for side nav

--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1440,11 +1440,20 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 2
+  
+- sbSecId: 5
+  title: Get User Syncs
+  link: /prebid-server/endpoints/getuids.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 2
 
 - sbSecId: 5
   title: Get Status
   link: /prebid-server/endpoints/status.html
-  isLastSubSectionItem: 0
+  isLastSubSectionItem: 1
   isHeader: 0
   isSectionHeader: 0
   sectionTitle:
