--- a/_data/partners.yml
+++ b/_data/partners.yml
@@ -18,6 +18,11 @@
   imgURL: /assets/images/partners/leader/pubmatic.png
   type: leader
   
+- company: SpotX 
+  link: https://spotx.tv
+  imgURL: /assets/images/partners/leader/spotx_logo.png
+  type: leader
+
 - company: Criteo 
   link: https://www.criteo.com/for-publishers/products/criteo-direct-bidder/
   imgURL: /assets/images/partners/tech/criteo.png
