san fran event on oct 24

--- a/_data/dropdown_v2.yml
+++ b/_data/dropdown_v2.yml
@@ -61,6 +61,15 @@
     isHeader: 0
     isSubSectionStart: 0
 
+  - subsectionId: 0
+    sectionId: 0
+    sectionName: Overview
+    title: Events
+    link:  /blog
+    needsDivider: 0
+    isHeader: 0
+    isSubSectionStart: 0
+
 #----------Product SubNav------------
 
 - sectionId: 1
