--- a/_data/message.yml
+++ b/_data/message.yml
@@ -1,6 +1,5 @@
 #-------------Message----------------
 - messageId: 1
-  messageText:
-  messageCreateDt: 07_29_2019
-  
+  messageText: <a href="/blog/2019-09-17-sfevent">Prebid Leadership Summit in San Francisco on Oct 24th 2019!</a>
+  messageCreateDt: 09_17_2019
 
