--- a/_data/message.yml
+++ b/_data/message.yml
@@ -1,5 +1,5 @@
 #-------------Message----------------
 - messageId: 1
-  messageText: <a href="/blog/2019-sf-event.html">Prebid Leadership Summit in San Francisco on Oct 24th 2019!</a>
+  messageText: <a href="/blog/2019-sf-event.html">Prebid Meetup and Leadership Summit in San Francisco on Oct 24th 2019!</a>
   messageCreateDt: 09_17_2019
 
