Real time data module & browsi Rtd Provider

--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -259,7 +259,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 2
-  
+
 - sbSecId: 1
   title: Prebid.js FAQ
   link: /dev-docs/faq.html
@@ -277,7 +277,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 2
-  
+
 - sbSecId: 1
   title: Common Issues
   link: /dev-docs/common-issues.html
@@ -469,7 +469,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 5
-  
+
 - sbSecId: 1
   title: Category Translation
   link: /dev-docs/modules/categoryTranslation.html
@@ -478,7 +478,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 5
-  
+
 - sbSecId: 1
   title: Freewheel Module
   link: /dev-docs/modules/freewheel.html
@@ -487,7 +487,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 5
-  
+
 - sbSecId: 1
   title: Ad Pod Module
   link: /dev-docs/modules/adpod.html
@@ -496,10 +496,28 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 5
-  
+
 - sbSecId: 1
   title: Supply Chain Object
   link: /dev-docs/modules/schain.html
+  isLastSubSectionItem: 1
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 5
+
+- sbSecId: 1
+  title: Real Time Data
+  link: /dev-docs/modules/realTimeData.html
+  isLastSubSectionItem: 1
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle:
+  subgroup: 5
+
+- sbSecId: 1
+  title: Browsi RTD Provider
+  link: /dev-docs/modules/browsiRtdProvider.html
   isLastSubSectionItem: 1
   isHeader: 0
   isSectionHeader: 0
@@ -993,7 +1011,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 0
-  
+
 - sbSecId: 3
   title: Prebid Universal Creative
   link: /overview/prebid-universal-creative.html
@@ -1056,7 +1074,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 0
-  
+
 - sbSecId: 3
   title: Setting up Prebid Long-Form Video in FreeWheel
   link: /adops/setting-up-prebid-video-in-freewheel.html
@@ -1065,7 +1083,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 0
-  
+
 - sbSecId: 3
   title: Setting up Prebid Long-Form Video in Google Ad Manager
   link: /adops/setting-up-prebid-ott-video-in-gam.html
@@ -1188,7 +1206,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 0
-  
+
 - sbSecId: 4
   title: Getting Started with Long Form Video for Prebid.js
   link: /prebid-video/video-long-form.html
@@ -1207,7 +1225,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 0
-  
+
 - sbSecId: 4
   title: Show OTT Video Ads with Prebid
   link: /dev-docs/show-long-form-video-with-gam.html
@@ -1331,7 +1349,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 1
-  
+
 - sbSecId: 5
   title: Currency Converter
   link: /prebid-server/developers/currency-converter.html
@@ -1340,7 +1358,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 1
-  
+
 - sbSecId: 5
   title: Default Request
   link: /prebid-server/developers/default-request.html
@@ -1422,7 +1440,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 2
-  
+
 - sbSecId: 5
   title: Prebid Server AMP
   link: /prebid-server/endpoints/openrtb2/amp.html
@@ -1431,7 +1449,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 2
-  
+
 - sbSecId: 5
   title: Prebid Server Video
   link: /prebid-server/endpoints/openrtb2/video.html
@@ -1449,7 +1467,7 @@
   isSectionHeader: 0
   sectionTitle:
   subgroup: 2
-  
+
 - sbSecId: 5
   title: Get User Syncs
   link: /prebid-server/endpoints/getuids.html
