Fixed old Brightcove example

--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1453,6 +1453,15 @@
   sectionTitle: 
   subgroup: 1
   
+- sbSecId: 4
+  title: "<span style='color:#EA9622;'>Long-Form (Ad Pods)"
+  link: 
+  isLastSubSectionItem: 0
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle: 
+  subgroup: 1
+  
 
 
 
