Updated side nav

--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -689,7 +689,7 @@
 
 - sbSecId: 2
   title: iOS Mobile API
-  link: /prebid-mobile/pbm-api/ios/pbm-api-iOS.html
+  link: /prebid-mobile/pbm-api/ios/pbm-api-ios.html
   isLastSubSectionItem: 0
   isHeader: 0
   isSectionHeader: 0
@@ -1270,6 +1270,7 @@
   isLastSubSectionItem: 0
   isHeader: 0
   isSectionHeader: 0
+  isCatHeader: 1
   sectionTitle: 
   subgroup: 1
   
@@ -1283,8 +1284,8 @@
   subgroup: 1
   
 - sbSecId: 4
-  title: '&nbsp;&nbsp;Flowplayer'
-  link: /examples/video/instream/flowplayer/pb-ve-flowplayer.html
+  title: '&nbsp;&nbsp;Brightcove'
+  link: /examples/video/instream/brightcove/pb-ve-brightcove.html
   isLastSubSectionItem: 0
   isHeader: 0
   isSectionHeader: 0
@@ -1292,7 +1293,16 @@
   subgroup: 1
   
 - sbSecId: 4
-  title: '&nbsp;&nbsp;JWPlayer (Platform)'
+  title: '&nbsp;&nbsp;Flowplayer'
+  link: /examples/video/instream/flowplayer/pb-ve-flowplayer.html
+  isLastSubSectionItem: 1
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle: 
+  subgroup: 1
+  
+- sbSecId: 4
+  title: '&nbsp;&nbsp;JW Player (Platform)'
   link: /examples/video/instream/jwplayer/pb-ve-jwplayer-platform.html
   isLastSubSectionItem: 0
   isHeader: 0
@@ -1301,7 +1311,7 @@
   subgroup: 1
   
 - sbSecId: 4
-  title: '&nbsp;&nbsp;JWPLayer (Hosted)'
+  title: '&nbsp;&nbsp;JW PLayer (Hosted)'
   link: /examples/video/instream/jwplayer/pb-ve-jwplayer-hosted.html
   isLastSubSectionItem: 0
   isHeader: 0
@@ -1310,7 +1320,7 @@
   subgroup: 1
   
 - sbSecId: 4
-  title: '&nbsp;&nbsp;JWPLayer (Playlist)'
+  title: '&nbsp;&nbsp;JW PLayer (Playlist)'
   link: /examples/video/instream/jwplayer/pb-ve-jwplayer-playlist.html
   isLastSubSectionItem: 0
   isHeader: 0
@@ -1351,6 +1361,7 @@
   isLastSubSectionItem: 0
   isHeader: 0
   isSectionHeader: 0
+  isCatHeader: 1
   sectionTitle: 
   subgroup: 1
   
@@ -1364,7 +1375,7 @@
   subgroup: 1
   
 - sbSecId: 4
-  title: '&nbsp;&nbsp;JWPlayer (Platform)'
+  title: '&nbsp;&nbsp;JW Player (Platform)'
   link: /examples/video/server/jwplayer/pbs-ve-jwplayer-platform.html
   isLastSubSectionItem: 0
   isHeader: 0
@@ -1373,7 +1384,7 @@
   subgroup: 1
   
 - sbSecId: 4
-  title: '&nbsp;&nbsp;JWPLayer (Hosted)'
+  title: '&nbsp;&nbsp;JW PLayer (Hosted)'
   link: /examples/video/server/jwplayer/pbs-ve-jwplayer-hosted.html
   isLastSubSectionItem: 0
   isHeader: 0
@@ -1382,7 +1393,7 @@
   subgroup: 1
   
 - sbSecId: 4
-  title: '&nbsp;&nbsp;JWPLayer (Playlist)'
+  title: '&nbsp;&nbsp;JW PLayer (Playlist)'
   link: /examples/video/server/jwplayer/pbs-ve-jwplayer-playlist.html
   isLastSubSectionItem: 0
   isHeader: 0
@@ -1391,7 +1402,7 @@
   subgroup: 1
   
 - sbSecId: 4
-  title: '&nbsp;&nbsp;JWPLayer (Player 7)'
+  title: '&nbsp;&nbsp;JW PLayer (Player 7)'
   link: /examples/video/server/jwplayer/pbs-ve-jwplayer-jwplayer7.html
   isLastSubSectionItem: 0
   isHeader: 0
@@ -1432,6 +1443,7 @@
   isLastSubSectionItem: 0
   isHeader: 0
   isSectionHeader: 0
+  isCatHeader: 1
   sectionTitle: 
   subgroup: 1
   
@@ -1447,6 +1459,25 @@
 - sbSecId: 4
   title: '&nbsp;&nbsp;No Server'
   link: /examples/video/outstream/pb-ve-outstream-no-server.html
+  isLastSubSectionItem: 0
+  isHeader: 0
+  isSectionHeader: 0
+  sectionTitle: 
+  subgroup: 1
+  
+- sbSecId: 4
+  title: "<span style='color:#EA9622;'>Long-Form (Ad Pods)"
+  link: 
+  isLastSubSectionItem: 0
+  isHeader: 0
+  isSectionHeader: 0
+  isCatHeader: 1
+  sectionTitle: 
+  subgroup: 1
+  
+- sbSecId: 4
+  title: '&nbsp;&nbsp;Freewheel'
+  link: /examples/video/long-form/pb-ve-lf-freewheel.html
   isLastSubSectionItem: 0
   isHeader: 0
   isSectionHeader: 0
