--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1270,7 +1270,16 @@
   isLastSubSectionItem: 0
   isHeader: 0
   isSectionHeader: 0
-
+  isCatHeader: 1
+  sectionTitle: 
+  subgroup: 1
+  
+- sbSecId: 4
+  title: "<span style='color:#EA9622;'>Instream"
+  link: 
+  isLastSubSectionItem: 0
+  isHeader: 0
+  isSectionHeader: 0
   isCatHeader: 1
   sectionTitle: 
   subgroup: 1
