--- a/_data/message.yml
+++ b/_data/message.yml
@@ -1,4 +1,4 @@
 #-------------Message----------------
 - messageId: 1
-  messageText: <a href="/blog/pbjs-3">Prebid.js 3.0 Major Release Announcement</a>
+  messageText: <a href="/blog/2019-sf-event.html">Prebid Meetup and Leadership Summit in San Francisco on Oct 24th 2019!</a><br/><a href="/blog/pbjs-3">Prebid.js 3.0 Major Release Announcement</a>
   messageCreateDt: 10_07_2019
